--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:reviews": "node scripts/seed-reviews.js"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
